All tested. Should be ready to be used.

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "autoload": {
     "psr-4": {
       "Antevenio\\SafeUrl\\": "src/",
-      "Example\\": "example/"
+      "Example\\": "example/",
+      "Antevenio\\SafeUrl\\Test\\": "test/"
     }
   },
   "require": {
