--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
     }
   },
   "require": {
-    "google/apiclient": "^2.1"
+    "google/apiclient": "^2.1",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "guzzlehttp/guzzle": "^6.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7"
