--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "google/apiclient": "^2.1",
     "ext-curl": "*",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^6.5"
+    "guzzlehttp/guzzle": "6.2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7"
