--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "google/apiclient": "^2.1",
     "ext-curl": "*",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "6.2.2"
+    "guzzlehttp/guzzle": "6.2.2",
+    "predis/predis": "^1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7"
